--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ var map = [
 [1, 1, 1, 1, 1, 1],
 ];
 
-var FOV = 0.1;
-var CELL_SIZE = 100;
+var FOV = 0.2;
+var CELL_SIZE = 20;
 
 var frame = context.createImageData(canvas.width, canvas.height);
 var frameCount = 0;
@@ -98,7 +98,8 @@ function render() {
         var step_y = Math.sin(angle) / 100;
 
         for (var y = 0; y < frame.height; y++) {
-            draw_texture(ceiling, world_x * floor.width, world_y * floor.height, frame, x, y);
+            draw_texture(ceiling, world_x * CELL_SIZE, world_y * CELL_SIZE, frame, x, y);
+            draw_texture(floor, world_x * CELL_SIZE, world_y * CELL_SIZE, frame, x, frame.height - y);
             world_x += step_x;
             world_y += step_y;
             step_x *= 1.01;
@@ -110,18 +111,13 @@ function render() {
                 break;
             }
         }
+        var distance = Math.sqrt(Math.pow(player_pos.x - world_x, 2) + Math.pow(player_pos.y - world_y, 2));
         var bottom = frame.height - y;
+        var wall_y = 0;
+        var wall_y_step = wall.height / (frame.height - 2 * y);
         while (y++ < bottom) {
-            draw_texture(wall, x, y, frame, x, y);
-        }
-        step_x *= -1;
-        step_y *= -1;
-        while (y++ < frame.height) {
-            draw_texture(floor, world_x * floor.width, world_y * floor.height, frame, x, y);
-            world_x += step_x;
-            world_y += step_y;
-            step_x *= 1.01;
-            step_y *= 1.01;
+            draw_texture(wall, (world_x - Math.floor(world_x)) * wall.width, wall_y, frame, x, y);
+            wall_y += wall_y_step;
         }
     }
     context.putImageData(frame, 0, 0);
