--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var map = [
 [1, 1, 1, 1, 1, 1],
 ];
 
-var FOV = 0.2;
+var FOV = 0.1;
 var CELL_SIZE = 20;
 
 var frame = context.createImageData(canvas.width, canvas.height);
@@ -123,6 +123,21 @@ function render() {
     context.putImageData(frame, 0, 0);
     context.fillText(frameCount++ + " " + player_pos.x + ", " + player_pos.y + " : " + player_direction, 15, 15);
 }
+function draw_minimap() {
+    context.globalAlpha = 0.5;
+    for (var y = 0; y < map.length; y++) {
+        for (var x = 0; x < map[0].length; x++) {
+            var cell = map[y][x];
+            if (cell == 0) {
+                continue;
+            }
+            context.fillStyle = "rgb(" + (cell * 20) + ", 0, 0)";
+            context.fillRect(20 + x * 6, 20 + y * 6, 5, 5);
+        }
+    }
+    context.fillStyle = "rgb(255, 0, 0)";
+    context.fillRect(20 + player_pos.x * 6, 20 + player_pos.y * 6, 5, 5);
+}
 
 var MOVEMENT_SPEED = 0.03;
 var TURNING_SPEED = 0.02;
@@ -167,6 +182,7 @@ function update_frame() {
     if (assets_ready) {
         update();
         render();
+        draw_minimap();
     }
     window.requestAnimationFrame(update_frame);
 }
