--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@ function render() {
         var step_x = Math.cos(angle) / 100;
         var step_y = Math.sin(angle) / 100;
 
+        var acceleration = 1.01;
         for (var y = 0; y < frame.height; y++) {
             draw_texture(ceiling, world_x * CELL_SIZE, world_y * CELL_SIZE, frame, x, y);
             draw_texture(floor, world_x * CELL_SIZE, world_y * CELL_SIZE, frame, x, frame.height - y);
             world_x += step_x;
             world_y += step_y;
-            step_x *= 1.01;
-            step_y *= 1.01;
+            step_x *= acceleration;
+            step_y *= acceleration;
 
             var wx = Math.round(world_x);
             var wy = Math.round(world_y);
@@ -111,7 +112,7 @@ function render() {
                 break;
             }
         }
-        var distance = Math.sqrt(Math.pow(player_pos.x - world_x, 2) + Math.pow(player_pos.y - world_y, 2));
+        //var distance = Math.sqrt(Math.pow(player_pos.x - world_x, 2) + Math.pow(player_pos.y - world_y, 2));
         var bottom = frame.height - y;
         var wall_y = 0;
         var wall_y_step = wall.height / (frame.height - 2 * y);
