Use atan2 for focal length?

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var map = [
 [1, 1, 1, 1, 1, 1],
 ];
 
-var FOV = 0.1;
+var FOV = 1;
 var CELL_SIZE = 20;
 
 var frame = context.createImageData(canvas.width, canvas.height);
@@ -91,7 +91,7 @@ function render() {
     var wall = textures["wall"];
     var floor = textures["floor"];
     for (var x = 0; x < frame.width; x++) {
-        var angle = player_direction + (x / frame.width - 0.5) * FOV * Math.PI * 2;
+        var angle = player_direction + Math.atan2(x / frame.width - 0.5, FOV);
         var world_x = player_pos.x;
         var world_y = player_pos.y;
         var step_x = Math.cos(angle) / 100;
