--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@ var FOV = 1;
 var CELL_SIZE = 20;
 
 var frame = context.createImageData(canvas.width, canvas.height);
-var frameCount = 0;
 function draw_texture(texture, sx, sy, frame, dx, dy) {
     sx = (sx % texture.width)|0;
     sy = (sy % texture.height)|0;
@@ -121,9 +120,36 @@ function render() {
         }
     }
     context.putImageData(frame, 0, 0);
-    context.fillText(frameCount++ + " " + player_pos.x + ", " + player_pos.y + " : " + player_direction, 15, 15);
 }
+
+var count_fps = (function () {
+    var lastLoop = (new Date()).getMilliseconds();
+    var count = 1;
+    var fps = 0;
+
+    return function () {
+        var currentLoop = (new Date()).getMilliseconds();
+        if (lastLoop > currentLoop) {
+            fps = count;
+            count = 1;
+        } else {
+            count += 1;
+        }
+        lastLoop = currentLoop;
+        return fps;
+    };
+}());
+
 function draw_minimap() {
+    var fps = count_fps();
+    context.font = "26px Verdana";
+    context.globalAlpha = 1;
+    context.lineWidth = 1;
+    context.strokeStyle = "rgb(0, 0, 0)";
+    context.strokeText(fps, canvas.width - 40, 30);
+    context.fillStyle = "rgb(255, 255, 255)";
+    context.fillText(fps, canvas.width - 40, 30);
+
     context.globalAlpha = 0.5;
     for (var y = 0; y < map.length; y++) {
         for (var x = 0; x < map[0].length; x++) {
