--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ function render() {
             step_x *= acceleration;
             step_y *= acceleration;
 
-            var wx = Math.round(world_x);
-            var wy = Math.round(world_y);
+            var wx = (world_x+0.5)|0;
+            var wy = (world_y+0.5)|0;
             if (map[wy][wx] != 0) {
                 break;
             }
