Change FPS counter font

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ var count_fps = (function () {
 
 function draw_minimap() {
     var fps = count_fps();
-    context.font = "26px Verdana";
+    context.font = "26px Arial";
     context.globalAlpha = 1;
     context.lineWidth = 1;
     context.strokeStyle = "rgb(0, 0, 0)";
