Important optimization on texture rendering
Modulo operation on floats are very slow, so I pulled the rounding
operation to *before* the modulo. The integer modulo is now much
faster and FPS went from ~38 to ~48.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ var CELL_SIZE = 20;
 
 var frame = context.createImageData(canvas.width, canvas.height);
 function draw_texture(texture, sx, sy, frame, dx, dy) {
-    sx = (sx % texture.width)|0;
-    sy = (sy % texture.height)|0;
+    sx = (sx|0 % texture.width);
+    sy = (sy|0 % texture.height);
     var textureIndex = (sy * texture.width + sx) * 4;
     var frameIndex = (dy * frame.width + dx) * 4;
     frame.data[frameIndex + 0] = texture.data[textureIndex + 0];
