--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var map = [
 ];
 
 var FOV = 0.1;
-var CELL_SIZE = 20;
+var CELL_SIZE = 200;
 
 var frame = context.createImageData(canvas.width, canvas.height);
 function draw_texture(texture, sx, sy, frame, dx, dy) {
@@ -85,39 +85,53 @@ function render() {
     var ceiling = textures["ceiling"];
     var wall = textures["wall"];
     var floor = textures["floor"];
-    for (var x = 0; x < frame.width; x++) {
-        var center_ratio = (x / frame.width - 0.5) * 2
+    for (var screen_x = 0; screen_x < frame.width; screen_x++) {
+        var center_ratio = (screen_x / frame.width - 0.5) * 2
         var angle = player_direction + center_ratio * Math.PI * FOV;
-        var world_x = player_pos.x;
-        var world_y = player_pos.y;
-        var step_x = Math.cos(angle) / 100;
-        var step_y = Math.sin(angle) / 100;
 
-        var acceleration = 1.01;
-        for (var y = 0; y < frame.height / 2; y++) {
-            draw_texture(ceiling, world_x * CELL_SIZE, world_y * CELL_SIZE, frame, x, y);
-            draw_texture(floor, world_x * CELL_SIZE, world_y * CELL_SIZE, frame, x, frame.height - y);
-            world_x += step_x;
-            world_y += step_y;
-            step_x *= acceleration;
-            step_y *= acceleration;
-
-            var wx = (world_x+0.5)|0;
-            var wy = (world_y+0.5)|0;
-            if (wx < 0 || wy < 0 || wy >= map.length || wx >= map[0].length || map[wy][wx] != 0) {
-                break;
-            }
+        var step_size = 0.01;
+        var sin = Math.sin(angle);
+        var cos = Math.cos(angle);
+        var ray_x = player_pos.x;
+        var ray_y = player_pos.y;
+        var distance = 0;
+        while (map[Math.round(ray_y)][Math.round(ray_x)] === 0) {
+            ray_x += cos * step_size;
+            ray_y += sin * step_size;
+            distance += step_size;
+            step_size *= 1.01;
         }
-        //var distance = Math.sqrt(Math.pow(player_pos.x - world_x, 2) + Math.pow(player_pos.y - world_y, 2));
-        var bottom = frame.height - y;
+
+        var wall_size = CELL_SIZE / distance;
+        var start_y = Math.floor(frame.height / 2 - wall_size / 2);
+        var rest_x = ray_x - Math.floor(ray_x);
+        var rest_y = ray_y - Math.floor(ray_y);
+        var rest = Math.abs(rest_x - 0.5) > Math.abs(rest_y - 0.5) ? rest_x : rest_y
+        var wall_x = rest * wall.width;
         var wall_y = 0;
-        var wall_y_step = wall.height / (frame.height - 2 * y);
-        var rest_x = world_x - Math.floor(world_x);
-        var rest_y = world_y - Math.floor(world_y);
-        var rest = Math.abs(rest_x - 0.5) > Math.abs(rest_y - 0.5) ? rest_x : rest_y;
-        while (y++ < bottom) {
-            draw_texture(wall, rest * wall.width, wall_y, frame, x, y);
+        var wall_y_step = wall.height / wall_size;
+        for (var screen_y = start_y; screen_y < frame.height - start_y; screen_y++) {
+            draw_texture(wall, wall_x, wall_y, frame, screen_x, screen_y);
             wall_y += wall_y_step;
+        }
+        /*
+        y = h/2 - (CELL_SIZE / d)/2
+        y = h/2 - CELL_SIZE / d
+        y*2 = h - CELL_SIZE / d
+        2y - h = -CELL_SIZE / d
+        (2y - h)/(-CELL_SIZE) = 1 / d
+        (h - 2y)/CELL_SIZE = 1 / d
+        CELL_SIZE/(h - 2y) = d
+        */
+
+        for (var screen_y = 0; screen_y < start_y; screen_y++) {
+            var distance = CELL_SIZE / (frame.height - 2 * screen_y);
+            var pos_x = player_pos.x + cos * distance;
+            var pos_y = player_pos.y + sin * distance;
+            var rest_x = pos_x - Math.floor(pos_x);
+            var rest_y = pos_y - Math.floor(pos_y);
+            draw_texture(ceiling, rest_x * ceiling.width, rest_y * ceiling.height, frame, screen_x, screen_y);
+            draw_texture(floor, rest_x * floor.width, rest_y * floor.height, frame, screen_x, frame.height - screen_y);
         }
     }
     context.putImageData(frame, 0, 0);
