Fix wall width (?)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ var map = [
 ];
 
 var FOV = 0.1;
-var CELL_SIZE = 200;
+var CELL_SIZE = canvas.width;
 
 var frame = context.createImageData(canvas.width, canvas.height);
 function draw_texture(texture, sx, sy, frame, dx, dy) {
